<resources>
    <string name="app_name">BrandsIn Delivery</string>
    <string name="google_maps_key">AIzaSyDWTbmhcokQYyU4PKjBLnzAZlac4hphs_I</string>
    <string name="permit_my_location"> Allow My device to access location</string>
    <string name="permit_description">If we get your geographical location, we will deliver everything you need with a higher accuracy</string>
    <string name="location">geographical location</string>
    <string name="choose_location_manually">Choose location manually</string>
    <string name="login">Login</string>
    <string name="login_via_email">Login via email</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">5xxxxxxxxx</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="create_account">Create account</string>
    <string name="dont_have_account">Dont\'t have an account ?</string>
    <string name="continue_with_google_plus">Continue with google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_gmail">Login With email</string>
    <string name="login_or_register">Login or create account</string>
    <string name="login_for_best_expirment">Login for best expirment</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"> Forgot Password ? </string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="invalid_password">Password must consist from 6:16 char</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="before_register_you_must_accept">Before register, you must accept</string>
    <string name="next">Next</string>
    <string name="Forgot_your_password">Forgot your password</string>
    <string name="enter_phone_to_reset_password">Enter your phone to reset password</string>
    <string name="resend">Resend</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_verification_code">Enter verification code was sent to your mobile</string>
    <string name="_00000">00000</string>
    <string name="reset_title">Enter new password</string>
    <string name="reset_desc">Enter yuor new password</string>
    <string name="terms_text">To become a member of the BrandsIn network application, you must first fill out the registration form, then agree and commit to the terms of the Talabat.com User Agreement. Upon completing and approving the registration form or obtaining any services or ordering a meal using the site;</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="not_login">Login</string>
    <string name="offers">Offers</string>
    <string name="notifications">Notifications</string>
    <string name="payment">Payment</string>
    <string name="reorder">Reorder</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="contact">Contact us</string>
    <string name="welcome">Welcome</string>
    <string name="delivered_to">Delivered to</string>
    <string name="home">home</string>
    <string name="address">Address</string>
    <string name="show_menu">Show </string>
    <string name="select_deliver_place">Select delivery place</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us_desc">We are pleased to contact you at any time. We are available to provide you with the best services</string>
    <string name="_20_1091860375">(+966)</string>
    <string name="messages">Messages</string>
    <string name="cart">Cart</string>
    <string name="delete_cart_warning">Are you want to delete this item from cart ?</string>
    <string name="confirm">confirm</string>
    <string name="ignore">ignore</string>
    <string name="make_order">Make order</string>
    <string name="add_more">ِAdd more</string>
    <string name="total">Total</string>
    <string name="sum">sum</string>
    <string name="extra_fees">Extra fees</string>
    <string name="_75">70 L.E</string>
    <string name="_15_50"> 15.50 L.E</string>
    <string name="_90_50"> 90 L.E </string>
    <string name="tell_us_something">Do you want to tell us something ? </string>
    <string name="confirm_order">Confirm order</string>
    <string name="notes"> Notes </string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_info">Profile Info</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="change_password">Change password</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="arabic">Arabic</string>
    <string name="egypt">egypt</string>
    <string name="update_profile">Update Profile</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="save">Save</string>
    <string name="about_app">About app</string>
    <string name="common_questions">Common questions</string>
    <string name="main"> Home </string>
    <string name="how_can_we_help_you">How can we help you</string>
    <string name="send">Send</string>
    <string name="if_we_help_you">Can we help you with something else?</string>
    <string name="write_your_questions">Write your inquiry here</string>
    <string name="version_number">Version number  </string>
    <string name="follow_us_via">Follow us through</string>
    <string name="what_is_your_rate_for_BrandsIn">Rate our app</string>
    <string name="write_here">Write here</string>
    <string name="send_your_rate">Send your rate</string>
    <string name="rate_app_title">Share your opinion with us</string>
    <string name="write_comment"> Write comment</string>
    <string name="rate_app_desc">Your comment and opinion help us to improve our services</string>
    <string name="delivery_done"> Delivery done</string>
    <string name="available_credit">Available credit</string>
    <string name="cards">Payment Cards</string>
    <string name="login_to_see_credit">Login to see your credit</string>
    <string name="first_name">First name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="last_name">Last name</string>
    <string name="birthdate">Birthdate</string>
    <string name="enter_your_birthdate">Enter your birthdate</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="order_review">Order review</string>
    <string name="logout">Logout</string>
    <string name="add">add</string>
    <string name="delete">Delete</string>
    <string name="change">change</string>
    <string name="add_address">Add address</string>
    <string name="you_donnot_save_any_addresses_yet">You don\'t saved any addresses yet</string>
    <string name="no_saved_addresses">No saved addresses</string>
    <string name="search">Search</string>
    <string name="area">Area</string>
    <string name="address_type">Nature of the address (home / office …)</string>
    <string name="house_type">Building type</string>
    <string name="street_number">Street name</string>
    <string name="house_number">Building name or number</string>
    <string name="flat_number">flat number</string>
    <string name="improve_location">Change location</string>
    <string name="floor_number">Floor number</string>
    <string name="delivery_time">Delivery time</string>
    <string name="pre_order">Pre-order</string>
    <string name="discount_code">Discount code</string>
    <string name="if_exist">(If exist )</string>
    <string name="payment_way">Payment way</string>
    <string name="total_cost">Total Cost</string>
    <string name="all_offer_will_show_here">All offers will be shown here</string>
    <string name="no_offers_found">There are no offers</string>
    <string name="no_notifications_found">There are no notifications</string>
    <string name="all_otifications_will_show_here">All notifications will be displayed here</string>
    <string name="login_to_see_notifications">Log in to view notifications</string>
    <string name="reasons_for_rate">Reasons for that evaluation?</string>
    <string name="your_opinion_in_driver">Write your opinion of the driver here</string>
    <string name="login_to_see_offers">Login to see offers</string>
    <string name="my_orders">My orders</string>
    <string name="login_to_see_orders">Log in to view your orders</string>
    <string name="no_orders">There are no pre-orders</string>
    <string name="all_orders_will_show_here">All orders will be displayed here</string>
    <string name="receive_code">Receive Code</string>
    <string name="cancel">Cancel</string>
    <string name="verify_phone_number">Check the phone number</string>
    <string name="verify_phone_desc">We will send an SMS to the phone number to verify its effectiveness</string>
    <string name="Verify_done">Your mobile verified successfully</string>
    <string name="verify_desc">Please enter the code sent to your mobile</string>
    <string name="resend_code">Resend code</string>
    <string name="chat_me">Call me </string>
    <string name="verify_via_chat">Verify via chat</string>
    <string name="time">In 36 minutes</string>
    <string name="visa_name">Credit name</string>
    <string name="visa_number"> Credit number</string>
    <string name="year_hint">YYYY</string>
    <string name="cvv_hint">CVV</string>
    <string name="month_hint">MM</string>
    <string name="enter_discount_code">Enter discount code</string>
    <string name="still_need_help">Strill need help</string>
    <string name="talk_with_us">Call us</string>
    <string name="resend_in">Resend in</string>
    <string name="zero_time">00:00</string>
    <string name="short_code">your code is not completed</string>
    <string name="rate_order">Rate order</string>
    <string name="buy_offer">Buy offer</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="products">Products</string>
    <string name="order_success">Order booked successfully</string>
    <string name="order_status">Order status</string>
    <string name="delivered">Delivered</string>
    <string name="on_way">On way</string>
    <string name="preparing">Preparing</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="addedd">Addedd</string>
    <string name="please_select_order_size">You must select order size first</string>
    <string name="choose_login_way">Choose the registration method</string>
    <string name="register_for_store">Store affiliate registration</string>
    <string name="register_single">Create a free account</string>
    <string name="login_to_start_your_trips">Log in and start your travels</string>
    <string name="reports">Correspondence report</string>
    <string name="personal_info"> Personal info</string>
    <string name="vehicle_info">Vehicle info</string>
    <string name="orders">Orders</string>
    <string name="name">Name </string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="vehicle_number">Vehicle number</string>
    <string name="licence_number">Vehicle license number</string>
    <string name="action_activation">Action activation</string>
</resources>