<?xml
    version="1.0"
    encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_30sdp"
        android:paddingEnd="@dimen/_30sdp">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo3"
            android:layout_marginTop="@dimen/_100sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/cairoregular"
            android:scaleType="centerCrop"
            android:src="@drawable/app_logo1"
            android:text="@string/choose_login_way"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registerStore"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:backgroundTint="@color/color_primary"
            android:fontFamily="@font/cairo_semibold"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/register_for_store"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_5ssp"
            app:layout_constraintTop_toBottomOf="@id/login_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registerSingle"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:backgroundTint="#FAFAFA"
            android:fontFamily="@font/cairo_semibold"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/register_single"
            android:textAllCaps="false"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_5ssp"
            app:layout_constraintTop_toBottomOf="@+id/btn_registerStore"
            app:strokeColor="@color/color_primary"
            app:strokeWidth="@dimen/_1sdp" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/cairo_semibold"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/btn_registerSingle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
