<?xml
    version="1.0"
    encoding="utf-8"?>

<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.brandsin.driver.ui.profile.vehicle.VehicleInfoViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_8sdp"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:id="@+id/name_layout"
                android:paddingBottom="@dimen/_8sdp"
                android:background="@drawable/login_field_bg"
                android:padding="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_48sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:background="?actionBarItemBackground"
                    android:src="@drawable/ic_vehicle_type"
                    android:scaleType="fitCenter"
                    android:tint="@color/color_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/vehicle_type"
                    android:textSize="@dimen/_9ssp"
                    android:fontFamily="@font/cairo_semibold"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/vehicle_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    android:textColor="@color/black"
                    android:fontFamily="@font/cairo_semibold"
                    android:textSize="@dimen/_12ssp"
                    android:background="@android:color/transparent"
                    android:textAlignment="viewStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:ignore="Autofill" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:id="@+id/lastName_layout"
                android:paddingBottom="@dimen/_8sdp"
                android:background="@drawable/login_field_bg"
                app:layout_constraintTop_toBottomOf="@+id/name_layout">

                <ImageButton
                    android:id="@+id/imageView21"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:background="?actionBarItemBackground"
                    android:src="@drawable/ic_veicle_number"
                    android:scaleType="fitCenter"
                    android:tint="@color/color_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/vehicle_number"
                    android:textSize="@dimen/_9ssp"
                    android:fontFamily="@font/cairo_semibold"
                    app:layout_constraintStart_toEndOf="@+id/imageView21"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/vehicle_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/cairo_semibold"
                    android:maxLength="11"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.987"
                    app:layout_constraintStart_toEndOf="@+id/imageView21"
                    app:layout_constraintStart_toStartOf="@+id/textView31"
                    app:layout_constraintTop_toBottomOf="@+id/textView31"
                    tools:ignore="Autofill" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:id="@+id/email_layout"
                android:paddingBottom="@dimen/_8sdp"
                android:background="@drawable/login_field_bg"
                app:layout_constraintTop_toBottomOf="@+id/lastName_layout">

                <ImageButton
                    android:id="@+id/img_email"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:background="?actionBarItemBackground"
                    android:src="@drawable/ic_license_number"
                    android:scaleType="fitCenter"
                    android:tint="@color/color_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/licence_number"
                    android:textSize="@dimen/_9ssp"
                    android:fontFamily="@font/cairo_semibold"
                    app:layout_constraintStart_toEndOf="@+id/img_email"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/licence_number"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitXY"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_email"
                    app:layout_constraintStart_toStartOf="@+id/text_email"
                    app:layout_constraintTop_toBottomOf="@+id/text_email"
                    tools:src="@drawable/app_logo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>